--- a/style.css
+++ b/style.css
@@ -13,11 +13,16 @@
     margin: 0;
 }
 
+html {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 body {
     width: 100%;
     min-height: 100vh;
     background-color: var(--background-color);
     background-image: var(--background-color-gradient);
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -30,6 +35,7 @@ body {
     background-image: var(--sheet-background-color-gradient);
     box-shadow: 10px 10px 20px rgb(0, 0, 0, 0.2);
     border-radius: 2px;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -40,10 +46,11 @@ body {
 #nav-bar {
     width: 100%;
     min-height: 80px;
+    padding: 0 15px;
+
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    padding: 0 15px;
     position: absolute;
     top: 10px;
 }
@@ -58,14 +65,42 @@ body {
 }
 
 #icon-container {
-    flex-grow: 1;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-grow: 1;
     gap: 10px;
 }
 
 .nav-icons {
     width: 30px;
     height: 30px;
+}
+
+#todo-sheet {
+    width: 100%;
+    min-height: 610px;
+    padding: 0 15px;
+
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    bottom: 0;
+}
+
+.new-input {
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid black;
+    outline: none;
+
+    transition: border-bottom 150ms ease-in;
+}
+
+.new-input:focus {
+    border-bottom-width: 2px;
+}
+
+.new-input:focus::placeholder {
+    opacity: 0.5;
 }
