--- a/style.css
+++ b/style.css
@@ -107,6 +107,11 @@ body {
     flex-grow: 1;
 }
 
+.task-container {
+    max-height: 370px;
+    overflow-y: scroll;
+}
+
 [type="checkbox"] {
     opacity: 0;
     position: absolute;
@@ -135,8 +140,9 @@ body {
 }
 
 .task-text {
-    width: 100%;
+    min-width: 350px;
     margin-right: 30px;
+    word-wrap: break-word;
 }
 
 [type="checkbox"] + label > .task-text {
