--- a/style.css
+++ b/style.css
@@ -87,6 +87,103 @@ body {
     height: 30px;
 }
 
+.icon-dropdowns {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    min-width: 160px;
+    min-height: 50px;
+
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    background-color: var(--sheet-background-color);
+}
+
+.icon-dropdowns:hover .dropdown-content{
+    display: block;
+}
+
+.palette-options {
+    min-width: 160px;
+    min-height: 50px;
+
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.palette-color-buttons {
+    width: 30px;
+    height: 30px;
+    border: 0;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.palette-color-buttons:hover {
+    opacity: 0.8;
+}
+
+#yellow-color-button {
+    background-color: #edd157;
+}
+
+.yellow-color {
+    --background-color: #f8e88a;
+    --background-color-gradient: linear-gradient(to top right, #edd157, #f8e88a);
+    --sheet-background-color: #fefdfa;
+    --sheet-background-color-gradient: linear-gradient(to bottom right, #fefdfa, #f4f3ec);
+    --primary-color: #737944;
+    --secondary-color: #d3cec0;
+    --add-button-color: #f5e56f;
+}
+
+#blue-color-button {
+    background-color: #3366ff;
+}
+
+.blue-color {
+    --background-color: #809fff;
+    --background-color-gradient: linear-gradient(to top right, #3366ff, #809fff);
+    --sheet-background-color: #e6ecff;
+    --sheet-background-color-gradient: linear-gradient(to bottom right, #e6ecff, #ccd9ff);
+    --primary-color: #737944;
+    --secondary-color: #d3cec0;
+    --add-button-color: #3366ff;
+}
+
+#green-color-button {
+    background-color: #00cc66;
+}
+
+.green-color {
+    --background-color: #80ffbf;
+    --background-color-gradient: linear-gradient(to top right, #33ff99, #80ffbf);
+    --sheet-background-color: #fefdfa;
+    --sheet-background-color-gradient: linear-gradient(to bottom right, #e6fff2, #ccffe6);
+    --primary-color: #737944;
+    --secondary-color: #d3cec0;
+    --add-button-color: #00cc66;
+}
+
+#clear-all-button {
+    background-color: transparent;
+    border: 0;
+    color: var(--primary-color);
+    font-weight: 700;
+
+    min-width: 160px;
+    min-height: 50px;
+    cursor: pointer;
+}
+
+#clear-all-button:hover {
+    background-color: rgba(0,0,0,0.2);
+}
+
 #todo-sheet {
     width: 100%;
     min-height: 490px;
