--- a/style.css
+++ b/style.css
@@ -32,8 +32,10 @@ body {
 }
 
 #todo-app-container {
-    min-width: 500px;
-    min-height: 700px;
+    width: 500px;
+    max-width: 500px;
+    height: 700px;
+    max-height: 700px;
     background-color: var(--sheet-background-color);
     background-image: var(--sheet-background-color-gradient);
     box-shadow: 10px 10px 20px rgb(0, 0, 0, 0.2);
@@ -94,10 +96,10 @@ body {
 }
 
 .dropdown-content {
-    display: none;
-    position: absolute;
     min-width: 160px;
     min-height: 50px;
+    display: none;
+    position: absolute;
 
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     background-color: var(--sheet-background-color);
@@ -171,10 +173,15 @@ body {
     --add-button-color: #00cc66;
 }
 
+#dropdown-content-clear-all {
+    right: 0;
+}
+
 #clear-all-button {
     background-color: transparent;
     border: 0;
     color: var(--primary-color);
+    font-size: inherit;
     font-weight: 700;
 
     min-width: 160px;
@@ -239,7 +246,8 @@ body {
 }
 
 .task-text {
-    min-width: 350px;
+    width: 350px;
+    max-width: 350px;
     margin-right: 30px;
     word-wrap: break-word;
 }
@@ -317,6 +325,7 @@ body {
     width: 100%;
     padding: 10px 0 10px 0;
     background: transparent;
+    font-size: inherit;
 
     border: none;
     border-bottom: 2px solid var(--secondary-color);
@@ -326,6 +335,7 @@ body {
 
 .new-input::placeholder {
     color: var(--secondary-color);
+    font-size: inherit;
 }
 
 .new-input:focus {
@@ -358,8 +368,8 @@ body {
 
 .todo-actions button {
     --size: 80px;
-    width: var(--size);
-    height: var(--size);
+    min-width: var(--size);
+    min-height: var(--size);
 
     background-color: var(--add-button-color);
     color: white;
@@ -373,4 +383,15 @@ body {
 
 .todo-actions button:hover {
     opacity: 0.7;
+}
+
+@media screen and (max-width:600px) {
+    body {
+        padding: 15px;
+        align-items: initial;
+    }
+    
+    .task-text {
+        min-width: 215px;
+    }
 }
